# SistemaDeImpressaoDeEtiquetas

./: .env.example  .gitignore  404.html  README.md  configuracoes.html  configuracoes.txt  dashboard.html  dashboard.txt  fila.html  fila.txt  historico.html  historico.txt  impressao.html  impressao.txt  index.html  index.txt  latest.json  next.config.js  package-lock.json  package.json  produtos.html  produtos.txt  web-info.html  web-info.txt
.github/workflows/: deploy.yml
404/: index.html
_next/static/chunks/: 100-300149600f4a3ad9.js  105-b8c9dc051efc9924.js  117-01f144bcc86a3d9c.js  117-26e0698c31a6e336.js  117-c636810a606cae9f.js  224-1480f261b0aa9816.js  233-36338cdd4d2b3813.js  244-7c0f7b4666f28110.js  286-93d8977b0d75c4c5.js  359-4b7f93538e1e8050.js  515-0d8f702d4b2a1aa5.js  598-641e6bddb6735503.js  605-7a9195542334fc3a.js  614-f3c00b062df82919.js  676-526c3a46584b4f93.js  676-8376ec0d13556119.js  686-a5c9286c3eee0596.js  712.b0ae01724d5160ba.js  733-7540178bf66d21dd.js  861-9e739e98e3d3aa16.js  899-cd60ad4fb687375e.js  main-359ef8381fc09dff.js  main-59ad5e53b2ce3499.js  main-68eebb350462a7cb.js  main-6dc197553e6e6574.js  main-9d1b4e14656e1fec.js  (+5 more)
configuracoes/: index.html  index.txt
dashboard/: index.html  index.txt
docs/: troubleshooting.md
fila/: index.html  index.txt
historico/: index.html  index.txt
impressao/: index.html  index.txt
produtos/: index.html  index.txt
scripts/: generate-icons.js
src-tauri/: .gitignore  .taurignore  Cargo.toml  tauri.conf.json
src-tauri/src/: db.rs  main.rs  printer.rs  windows_printing.rs
src/app/: globals.css  layout.tsx  page.tsx
src/components/: LabelPreviewDialog.tsx  Update-checker.tsx  label-preview.tsx  print-manager.tsx  printer-status.tsx  product-form.tsx  product-list.tsx  sidebar.tsx
src/contexts/: printer-context.tsx
src/lib/: ppla.ts
src/types/: index.ts  ppla.ts  product.ts
(+49 files in other folders)
