[package]
name = "sistema-de-impressao-de-etiquetas"
version = "0.1.0"
description = "Um aplicativo Desktop para impressao de etiquetas com impressora térmica usando o tauri com react e next.js"
authors = ["Celso Junior"]
license = ""
repository = ""
edition = "2021"

[build-dependencies]
tauri-build = { version = "1.5", features = [] }

[dependencies]
tauri = { version = "1.5", features = [ "shell-open", "dialog-all", "window-all"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
rusqlite = { version = "0.29.0", features = ["bundled"] }
serialport = "4.2.2"
tokio = { version = "1.0", features = ["full"] }
chrono = "0.4"
thiserror = "1.0"

[features]
custom-protocol = ["tauri/custom-protocol"]
