[package]
name = "sistema-de-impressao-de-etiquetas"
version = "0.1.0"
description = "Um aplicativo Desktop para impressao de etiquetas com impressora térmica usando o tauri com react e next.js"
authors = ["Celso Junior"]
license = ""
repository = ""
edition = "2021"

[build-dependencies]
tauri-build = { version = "1.5", features = [] }

[dependencies]
tauri = { version = "1.5", features = [ "dialog-all", "http-all", "updater", "fs-all", "path-all"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
rusqlite = { version = "0.29.0", features = ["bundled"] }
rusb = "0.9"  # Substituindo serialport por rusb
tokio = { version = "1.0", features = ["full"] }
chrono = "0.4"
thiserror = "1.0"
once_cell = "1.7"
windows = { version = "0.61.1", features = ["Win32_Graphics_Printing", "Win32_Foundation", "Win32_Globalization"] }
windows-sys = { version = "0.59.0", features = ["Win32_Graphics_Printing", "Win32_Foundation"] }
tempfile = "3.19.1"

[features]
custom-protocol = ["tauri/custom-protocol"]
